--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bootstrap": "^4.6.0",
         "bootstrap-vue": "^2.21.2",
         "core-js": "^3.6.5",
+        "particles.vue": "^2.10.0",
         "vue": "^2.6.12",
         "vue-i18n": "^8.24.2",
         "vue-router": "^3.5.1"
