Add backoffice template page

--- a/src/views/datasetProject.json
+++ b/src/views/datasetProject.json
@@ -28,7 +28,7 @@
         },
         {
             "id": "4",
-            "name": "Project 4",
+            "name": "Project 4 Test long name",
             "location": "Phnom Penh",
             "area": "140m2",
             "mainImage": "project4.jpg",
