--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "bootstrap-vue": "^2.21.2",
         "core-js": "^3.6.5",
         "particles.vue": "^2.10.0",
         "vue": "^2.6.12",
+        "vue-axios": "^3.2.4",
         "vue-i18n": "^8.24.2",
         "vue-router": "^3.5.1"
     },
