--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "ajv": "^7.2.3",
+        "ajv-errors": "^2.0.1",
+        "ajv-formats": "^2.1.1",
         "axios": "^0.21.1",
         "bootstrap": "^4.6.0",
         "bootstrap-vue": "^2.21.2",
         "core-js": "^3.6.5",
+        "is-buffer": "^2.0.5",
         "particles.vue": "^2.10.0",
         "vue": "^2.6.12",
         "vue-axios": "^3.2.4",
@@ -19,11 +23,11 @@
         "vue-router": "^3.5.1"
     },
     "devDependencies": {
-        "@vue/cli-plugin-babel": "~4.5.0",
-        "@vue/cli-plugin-eslint": "~4.5.0",
-        "@vue/cli-service": "~4.5.0",
+        "@vue/cli-plugin-babel": "^5.0.8",
+        "@vue/cli-plugin-eslint": "^5.0.8",
+        "@vue/cli-service": "^5.0.8",
         "babel-eslint": "^10.1.0",
-        "eslint": "^6.7.2",
+        "eslint": "^7.32.0",
         "eslint-plugin-vue": "^6.2.2",
         "vue-template-compiler": "^2.6.11"
     },
